# smart-svn-commit

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  smart-svn-commit.spec
.claude/: settings.local.json
.github/workflows/: release.yml
installer/: installer.nsi
openspec/: project.md
openspec/changes/add-github-workflow-release/: design.md  proposal.md  tasks.md
openspec/changes/add-github-workflow-release/specs/ci-cd/: spec.md
openspec/changes/archive/2026-01-09-add-github-workflow-release/: tasks.md
openspec/changes/archive/2026-01-09-add-github-workflow-release/specs/ci-cd/: spec.md
openspec/changes/archive/2026-01-09-add-windows-integration/: proposal.md  tasks.md
openspec/changes/archive/2026-01-09-add-windows-integration/specs/windows-integration/: spec.md
openspec/changes/archive/2026-01-09-refactor-remove-code-duplication/: proposal.md  tasks.md
openspec/changes/archive/2026-01-09-refactor-remove-code-duplication/specs/code-organization/: spec.md
openspec/specs/ci-cd/: spec.md
openspec/specs/code-organization/: spec.md
openspec/specs/windows-integration/: spec.md
src/smart_svn_commit/: __init__.py  __main__.py  cli.py
src/smart_svn_commit/ai/: __init__.py  diff.py  factory.py  fallback.py  generator.py
src/smart_svn_commit/config/: __init__.py  default_config.json
src/smart_svn_commit/core/: __init__.py  commit.py  config.py  fs_helper.py  parser.py  svn_executor.py
src/smart_svn_commit/ui/: __init__.py  commit_message.py  constants.py  context_menu.py  file_list_widget.py  icon_cache.py  logger.py  main_window.py  main_window_test.py  menu_constants.py  settings_dialog.py  styles.py  svn_loader.py
src/smart_svn_commit/utils/: __init__.py  filters.py  regex_cache.py
src/smart_svn_commit/windows/: __init__.py  context_menu_extension.py  context_menu_installer.py  menu_check.py  registry.py  svn_helpers.py
