[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-svn-commit"
version = "2.3.0"
description = "AI 驱动的 SVN 提交助手，支持 PyQt5 GUI 和 TortoiseSVN 集成"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["svn", "commit", "gui", "pyqt5", "ai", "tortoise", "conventional-commits"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Software Development :: Version Control",
    "Topic :: Software Development :: User Interfaces",
]

dependencies = [
    "PyQt5>=5.15.0",
]

[project.optional-dependencies]
ai = ["openai>=1.0.0"]
dev = [
    "pytest>=7.0",
    "pytest-qt>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "pyinstaller>=6.0",
]
all = ["smart-svn-commit[ai,dev]"]

[project.urls]
Homepage = "https://github.com/hi-fangj/smart-svn-commit"
Documentation = "https://github.com/hi-fangj/smart-svn-commit#readme"
Repository = "https://github.com/hi-fangj/smart-svn-commit.git"
Issues = "https://github.com/hi-fangj/smart-svn-commit/issues"

[project.scripts]
smart-svn-commit = "smart_svn_commit.cli:main"
ssc = "smart_svn_commit.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"smart_svn_commit.config" = ["*.json"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
